--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.root=INFO
 logging.pattern.console=%cyan(%d{yyyy-MM-dd}) [%blue(%t)] %highlight(%-5level) %yellow(%C{1.}): %msg%n%throwable
+
+beautrace.root-package=io.beautrace.spring.servlet.app
