--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 logging.level.root=INFO
 logging.pattern.console=%cyan(%d{yyyy-MM-dd}) [%blue(%t)] %highlight(%-5level) %yellow(%C{1.}): %msg%n%throwable
+logging.level.io.beautrace.spring.servlet.aspect.TracingAdvice=DEBUG
 
+# Setting this property is required to enable Beautrace
 beautrace.root-package=io.beautrace.spring.servlet.app
