Added output file path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ logging.level.io.beautrace.spring.servlet.aspect.TracingAdvice=DEBUG
 
 # Setting this property is required to enable Beautrace
 beautrace.root-package=io.beautrace.spring.servlet.app
+beautrace.output-file=/opt/projects/beautrace-spring-servlet-app/beautrace.json
